# hakyll-images

./: .appveyor.yml  .gitignore  CHANGELOG.md  LICENSE.md  README.md  RELEASE-CHECKLIST.md  Resize.hs  cabal.project  hakyll-images.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
tests/: TestSuite.hs
tests/Hakyll/Images/Common/: Tests.hs
tests/Hakyll/Images/CompressJpg/: Tests.hs
tests/Hakyll/Images/Metadata/: Tests.hs
tests/Hakyll/Images/Rescale/: Tests.hs
tests/Hakyll/Images/Resize/: Tests.hs
tests/Hakyll/Images/Tests/: Utils.hs
