cabal-version: 2.2

name:           hakyll-images
version:        1.3.0
synopsis:       Hakyll utilities to work with images
description:    hakyll-images is an add-on to the hakyll package. It adds utilities to work with images, including JPEG compression.
category:       Web
homepage:       https://github.com/LaurentRDC/hakyll-images#readme
bug-reports:    https://github.com/LaurentRDC/hakyll-images/issues
author:         Laurent P. René de Cotret
maintainer:     Laurent P. René de Cotret
license:        BSD-3-Clause
license-file:   LICENSE.md
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
data-files:
    tests/data/piccolo.jpg
    tests/data/donkey.gif
    tests/data/issue11.jpeg
    tests/data/issue11-2.jpg

source-repository head
  type: git
  location: https://github.com/LaurentRDC/hakyll-images

library
  exposed-modules:
      Hakyll.Images
      Hakyll.Images.CompressJpg
      Hakyll.Images.Internal
      Hakyll.Images.Resize
      Hakyll.Images.Metadata
  other-modules:
      Codec.Picture.Saving.WithMetadata
      Hakyll.Images.Common
  hs-source-dirs:
      library
  ghc-options: -Wall -Wcompat
  build-depends:
      JuicyPixels       >= 3   && <4
    , JuicyPixels-extra >  0.3 && <1
    , base              >= 4.8 && <5
    , binary            >= 0.5 && <1
    , bytestring        >= 0.9 && <1
    , hakyll            >  4   && <5
    , vector            >= 0.12
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
      Hakyll.Images.Common.Tests
      Hakyll.Images.CompressJpg.Tests
      Hakyll.Images.Metadata.Tests
      Hakyll.Images.Resize.Tests
      Hakyll.Images.Tests.Utils
  hs-source-dirs: tests
  ghc-options: -Wall -Wcompat
  build-depends:
      HUnit-approx      >= 1    && <2
    , JuicyPixels       >= 3    && <4
    , JuicyPixels-extra >  0.3  && <1
    , base              >= 4.8  && <5
    , binary            >= 0.5  && <1
    , bytestring        >= 0.9  && <1
    , containers
    , directory         >= 1    && <2
    , filepath          >= 1    && <2
    , hakyll            >= 4    && <5
    , hakyll-images
    , tasty             >= 0.11 && <2
    , tasty-hunit       >= 0.9  && <1
    , vector            >=0.12
  default-language: Haskell2010
